# bazel-platform-rules-rust-duplicate-file-bug

./: .bazelrc  BUILD.bazel  README.md  WORKSPACE
src/: lib.rs
